<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/maps"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/maps"
        app:showAsAction="always"/>

    <item
        android:id="@+id/fragmentAdd"
        android:icon="@drawable/ic_round_add_24"
        android:iconTint="@color/black"
        android:title="@string/account"
        app:showAsAction="always"
        tools:ignore="UnusedAttribute" />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_round_logout_24"
        android:title="@string/logout"
        app:showAsAction="ifRoom"/>

</menu>