<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="14dp"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.login_register.FragmentLogin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgApp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_dicoding"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/title_login_register"
            android:textStyle="bold"
            android:textColor="@color/blue_dicoding"
            android:textSize="22sp"
            android:alpha="0"
            app:layout_constraintEnd_toEndOf="@+id/imgApp"
            app:layout_constraintStart_toStartOf="@id/imgApp"
            app:layout_constraintTop_toBottomOf="@id/imgApp" />

        <TextView
            android:id="@+id/tvWelcome2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/desc_login_register"
            android:textStyle="normal"
            android:textColor="@color/blue_dicoding"
            android:textSize="16sp"
            android:textAlignment="center"
            android:alpha="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

        <TextView
            android:id="@+id/tvSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:textColor="@color/blue_dicoding"
            android:textSize="22sp"
            android:textAlignment="center"
            android:alpha="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWelcome2" />


        <com.byandev.storyapp.utils.EmailEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/email"
            android:background="@drawable/bg_card_active"
            android:paddingVertical="10dp"
            android:paddingHorizontal="14dp"
            android:textColor="@color/black"
            android:textColorHint="@color/color_grey"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/tvSignIn"/>

        <com.byandev.storyapp.utils.PasswordEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/color_grey"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_card_active"
            android:paddingVertical="10dp"
            android:paddingHorizontal="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtEmail" />

        <CheckBox
            android:id="@+id/cbRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/edtPassword"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAllCaps="false"
            android:layout_marginTop="16dp"
            android:background="@color/blue_dicoding"
            android:textColor="@color/white"
            android:backgroundTintMode="src_atop"
            android:alpha="0"
            app:layout_constraintTop_toBottomOf="@id/cbRemember"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register_here"
            android:textColor="@color/black"
            android:alpha="0"
            app:layout_constraintTop_toBottomOf="@id/btnLogin"
            app:layout_constraintBottom_toBottomOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>