<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:elevation="-2dp"
    android:layout_marginTop="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/imgUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/user_profile"
        android:layout_margin="12dp"
        app:fabSize="mini"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        tools:text="@string/username"
        android:textSize="18sp"
        android:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintTop_toTopOf="@id/imgUser"
        app:layout_constraintStart_toEndOf="@id/imgUser"
        app:layout_constraintBottom_toBottomOf="@id/imgUser"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/imageStory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_dicoding"
        android:scaleType="centerCrop"
        android:layout_marginTop="8dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgUser"
        android:contentDescription="@string/story_image"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/username"
        android:ellipsize="end"
        android:maxLines="2"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:adjustViewBounds="true"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toBottomOf="@id/imageStory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/tvCreatedAt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif-condensed-light"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>